<resources>
    <string name="app_name">nmedia</string>
    <string name="author">Netology. University of Internet Professions of the Future</string>
    <string name="date_post">21 may 18:36</string>
    <string name="text_post">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="demo_count_look">1.2K</string>
    <string name="menu_remove">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="enter_content">Enter content</string>
    <string name="like" translatable="false">Like</string>
    <string name="share" translatable="false">Share</string>
    <string name="options" translatable="false">Options</string>
    <string name="look" translatable="false">Look </string>
    <string name="toolbar_title">NMedia</string>
    <string name="tb_edit_post_subtitle">Add/Edit Post</string>
    <string name="post_not_empty">Post should not be empty</string>
    <string name="str_hint_name_link">Link to Video</string>
    <string name="chanel_id" translatable="false">nmedia_notification</string>
    <string name="chanel_name" translatable="false">NMedia chanel</string>
    <string name="channel_description" translatable="false">NMedia channel description</string>
    <string name="notification_user_modify" translatable="false">User %1$s %2$s %3$s\'s post %4$s</string>
    <string name="imposible_operation">Imposible operation</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="str_server_error_500">Server error. Try again later</string>
    <string name="str_error_400">Error in the request.</string>
    <string name="btn_str_close">Close App</string>
</resources>