<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/post_avatar_size"
            android:layout_height="@dimen/post_avatar_size"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginTop="@dimen/app_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_netology_original" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginEnd="@dimen/app_margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/author"
            app:layout_constraintBottom_toTopOf="@+id/tv_post_date"
            app:layout_constraintEnd_toStartOf="@+id/iv_more"
            app:layout_constraintStart_toEndOf="@id/iv_avatar"
            app:layout_constraintTop_toTopOf="@id/iv_avatar" />

        <TextView
            android:id="@+id/tv_post_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin"
            android:text="@string/date_post"
            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
            app:layout_constraintStart_toEndOf="@id/iv_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_author" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/iv_more"
            style="@style/optionsButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin"
            android:contentDescription="@string/options"
            app:icon="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_avatar" />

        <TextView
            android:id="@+id/tv_post_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginTop="@dimen/app_margin"
            android:text="@string/text_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_post_date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/iv_like"
            style="@style/likeCheckBoxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin"
            android:checkable="true"
            android:contentDescription="@string/like"
            app:icon="@drawable/ic_like_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_post_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/iv_share"
            style="@style/shareButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin"
            android:contentDescription="@string/share"
            app:icon="@drawable/ic_baseline_share_24"
            app:layout_constraintBottom_toBottomOf="@id/iv_like"
            app:layout_constraintStart_toEndOf="@id/iv_like"
            app:layout_constraintTop_toTopOf="@id/iv_like" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/iv_look"
            style="@style/lookButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/app_margin"
            android:contentDescription="@string/look"
            android:text="@string/demo_count_look"
            app:icon="@drawable/ic_baseline_visibility_24"
            app:layout_constraintBottom_toBottomOf="@id/iv_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_like" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>